feat: implement category-wise menu response for restaurant menu